fixed spacing more using br() and added margins to next and back button

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -78,6 +78,7 @@ h2 {
     border-radius: 40px;
     padding-left: 22px;
     padding-right: 22px;
+    margin-bottom: 20px;
 }
 
 .btn-primary:hover{
